#310 fix Java 8 errors